--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "TSC_COMPILE_ON_ERROR=true react-scripts build",    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
